<resources>
    <string name="app_name">Calendar</string>
    <string name="next">Next</string>
    <string name="month">Month</string>
    <string name="prev">Prev</string>
    <string name="date_and_time">Date and Time</string>
    <string name="event_description">Event Description</string>
    <string name="save">Save</string>
    <string name="event_title">Event Title</string>
    <string name="event_name">Event name</string>
    <string name="save_event">Save Event</string>
    <string name="goodMorning">Good Morning</string>
    <string name="ownerName">Owner Name</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="reminder">Reminder</string>
    <string name="set_reminder">Set Reminder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="repeat">Repeat</string>
    <string name="location">Location</string>
    <string name="start_date_time">Start Date and Time</string>
    <string name="end_date_time">End Date and Time</string>
    <string name="cancel">Cancel</string>
    <string name="reminder_5_min">5 min before</string>
    <string name="reminder_15_min">15 min before</string>
    <string name="reminder_30_min">30 min before</string>
    <string name="reminder_1_hour">1 hour before</string>
    <string name="reminder_1_day">1 day before</string>
    <string name="set_category">Set Category</string>
    <string name="max_repeat_date_and_time">Max Repeat Date and Time</string>
    <string name="set_repeat">Set Repeat</string>
    <string name="title_activity_navigation_drawer">ActivityNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calendar</string>
    <string name="nav_header_subtitle">Make It Easy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Calendar</string>
    <string name="menu_schedule">Schedule</string>
    <string name="action_search">Search</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="todo">Your to-do text here</string>
    <string name="start_date_and_time">Start Date and Time</string>
    <string name="end_date_and_time">End Date and Time</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="user_category">User</string>
    <string name="user_name_title">User Name</string>
    <string name="user_name_summary">Enter user name</string>
    <string name="choose_photo_title">Choose Photo</string>
    <string name="date_time_category">Date and Time</string>
    <string name="time_format_title">Time Format</string>
    <string name="date_format_title">Date Format</string>
    <string name="language_category">Language</string>
    <string name="language_title">Language</string>
    <string name="search_edit_text">Enter name or id</string>
    <string name="search_button_name">Search</string>
    <string name="next_week">Next week</string>
    <string name="prev_week">Prev week</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Th</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sat</string>
    <string name="choose_photo">Choose photo</string>
    <string name="home_work">Home work</string>
    <string name="set_number_of_lesson">Set number of lesson</string>
    <string name="lesson_description">Lesson Description</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="set_day_of_the_week">Set day of the week</string>
    <string name="grade">Grade</string>
    <string name="completed_homework">Completed Homework</string>
    <string name="attendance">Attendance</string>
    <string name="common_setting">Common Settings</string>
    <string name="schedule_setting">Schedule Settings</string>
    <string name="settings_category_general">General</string>
    <string name="general_settings_key">General settings</string>
    <string name="general_settings_summary">General settings description</string>
    <string name="general_settings_title">General Settings</string>
    <string name="settings_category_schedule">Schedule</string>
    <string name="schedule_settings_key">Schedule settings</string>
    <string name="schedule_settings_summary">Schedule settings description</string>
    <string name="schedule_settings_title">Schedule Settings</string>
    <string name="weeks_title">Number of weeks of study</string>
    <string name="weeks_summary">Select the number of weeks of study</string>
    <string name="number_of_weeks">Number of weeks</string>
    <string name="nav_day">Day</string>
    <string name="nav_week">Week</string>
    <string name="nav_add_event">Add Event</string>
    <string name="nav_month">Month</string>
    <string name="nav_edit_event">Edit Event</string>
    <string name="nav_details_event">Event Details</string>
    <string name="nav_schedule_day">Day Schedule</string>
    <string name="nav_schedule_week">Week Schedule</string>
    <string name="nav_add_class">Add Class</string>
    <string name="nav_details_class">Class Details</string>
    <string name="nav_edit_class">Edit Class</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="greeting_night">Good night</string>
    <string name="greeting_morning">Good morning</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_evening">Good evening</string>
    <string name="enter_name">Enter user name:</string>
    <string name="name_user">User name:</string>
    <string name="create_lesson">Create lesson</string>
    <string name="new_category_title">New category</string>
    <string name="new_category_message">Input name of category:</string>
    <string name="new_category_positive_button">Add</string>
    <string name="new_category_negative_button">Cancel</string>
    <string name="new_category_name_empty_error">Name must not be empty</string>
    <string name="update_event_title">Update Event</string>
    <string name="update_event_message">What do you want to update?</string>
    <string name="update_all_events_button">All Repeated Events</string>
    <string name="update_one_event_button">Just This One</string>
    <string name="update_next_events_button">This And All Next Events</string>
    <string name="all_repeated_events_updated_message">All repeated events updated</string>
    <string name="event_updated_message">Event updated</string>
    <string name="this_and_next_events_updated_message">This and next events updated</string>
    <string name="event_name_empty_error">Event name cannot be empty</string>
    <string name="invalid_time_error">Invalid start/end time</string>
    <string name="delete_event_title">Delete Event</string>
    <string name="delete_event_message">Do you want to delete all recurring events or just this one?</string>
    <string name="delete_event_all_button">All Recurring Events</string>
    <string name="delete_event_one_button">Just This One</string>
    <string name="delete_event_next_button">This And All Next Events</string>
    <string name="event_deleted">Event deleted</string>
    <string name="all_recurring_deleted">All recurring events deleted</string>
    <string name="this_next_deleted">This and next events deleted</string>
    <string name="class_name_empty_error">Class name cannot be empty</string>
    <string name="event_not_found_error">Event not found</string>
    <string name="class_not_found_error">Class not found</string>
    <string name="insert_classes_title">Insert Сlasses</string>
    <string name="insert_classes_message">What do you want to insert?</string>
    <string name="insert_classes_all_button">All Сlasses</string>
    <string name="insert_classes_one_button">Just One</string>
    <string name="classes_inserted">Classes inserted</string>
    <string name="class_inserted">Class inserted</string>
    <string name="update_classes_title">Update Classes</string>
    <string name="update_classes_message">What do you want to update?</string>
    <string name="update_classes_all">All Repeated Classes</string>
    <string name="update_classes_one">Just This One</string>
    <string name="update_classes_next">This And All Next Classes</string>
    <string name="update_classes_all_toast">All repeated classes updated</string>
    <string name="update_classes_one_toast">Class updated</string>
    <string name="update_classes_next_toast">This and next classes updated</string>
    <string name="delete_lesson_title">Delete Lesson</string>
    <string name="delete_lesson_message">Do you want to delete all recurring lessons or just this one?</string>
    <string name="delete_lesson_all_button">All Recurring Lessons</string>
    <string name="delete_lesson_one_button">Just This One</string>
    <string name="delete_lesson_next_button">This And All Next Lessons</string>
    <string name="all_recurring_deleted_lesson">All recurring lessons deleted</string>
    <string name="lesson_deleted">Lesson deleted</string>
    <string name="this_next_deleted_lesson">This and next lessons deleted</string>
    <string name="event_reminder_channel_id">EVENT_REMINDER</string>
    <string name="event_reminder_channel_name">Event Reminder</string>
    <string name="event_reminder_content_title">%s</string>
    <string name="event_reminder_content_text">%s starts in %d minutes</string>
    <string name="start_date_title">Start Date of Education</string>
    <string name="end_date_title">End Date of Education</string>
    <string name="start_time_title1">Start Time of First Class</string>
    <string name="end_time_title1">End Time of First Class</string>
    <string name="start_time_title2">Start Time of Second Class</string>
    <string name="end_time_title2">End Time of Second Class</string>
    <string name="start_time_title3">Start Time of Third Class</string>
    <string name="end_time_title3">End Time of Third Class</string>
    <string name="start_time_title4">Start Time of Fourth Class</string>
    <string name="end_time_title4">End Time of Fourth Class</string>
    <string name="start_time_title5">Start Time of Fifth Class</string>
    <string name="end_time_title5">End Time of Fifth Class</string>
    <string name="start_time_title6">Start Time of Sixth Class</string>
    <string name="end_time_title6">End Time of Sixth Class</string>
    <string name="semester_date_category">Semester Date</string>
    <string name="class_time_category">Class Time</string>
    <string name="start_time_category1">First class</string>
    <string name="start_time_category2">Second class</string>
    <string name="start_time_category3">Third class</string>
    <string name="start_time_category4">Forth class</string>
    <string name="start_time_category5">Fifth class</string>
    <string name="start_time_category6">Sixth class</string>

</resources>