<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/semester_date_category">
        <EditTextPreference
            android:defaultValue="2023-02-01"
            android:inputType="date"
            android:key="start_date_preference"
            android:title="@string/start_date_title" />
        <EditTextPreference
            android:defaultValue="2023-05-30"
            android:inputType="date"
            android:key="end_date_preference"
            android:title="@string/end_date_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/class_time_category">
        <PreferenceCategory android:title="@string/start_time_category1">
            <EditTextPreference
                android:defaultValue="08:20"
                android:key="start_time_preference1"
                android:title="@string/start_time_title1"
                android:inputType="datetime"
                android:selectAllOnFocus="true"/>

            <EditTextPreference
                android:defaultValue="09:40"
                android:key="end_time_preference1"
                android:title="@string/end_time_title1"
                android:inputType="time"
                android:selectAllOnFocus="true"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/start_time_category2">
            <EditTextPreference
            android:defaultValue="09:50"
            android:key="start_time_preference2"
            android:title="@string/start_time_title2"
            android:inputType="time"/>

            <EditTextPreference
            android:defaultValue="11:10"
            android:key="end_time_preference2"
            android:title="@string/end_time_title2"
            android:inputType="time"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/start_time_category3">
            <EditTextPreference
            android:defaultValue="11:30"
            android:key="start_time_preference3"
            android:title="@string/start_time_title3"
            android:inputType="time"/>

            <EditTextPreference
            android:defaultValue="12:50"
            android:key="end_time_preference3"
            android:title="@string/end_time_title3"
            android:inputType="time"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/start_time_category4">
            <EditTextPreference
            android:defaultValue="13:00"
            android:key="start_time_preference4"
            android:title="@string/start_time_title4"
            android:inputType="time"/>

            <EditTextPreference
            android:defaultValue="14:20"
            android:key="end_time_preference4"
            android:title="@string/end_time_title4"
            android:inputType="time"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/start_time_category5">
            <EditTextPreference
            android:defaultValue="14:40"
            android:key="start_time_preference5"
            android:title="@string/start_time_title5"
            android:inputType="time"/>

            <EditTextPreference
            android:defaultValue="16:00"
            android:key="end_time_preference5"
            android:title="@string/end_time_title5"
            android:inputType="time"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/start_time_category6">
            <EditTextPreference
            android:defaultValue="16:10"
            android:key="start_time_preference6"
            android:title="@string/start_time_title6"
            android:inputType="time"/>
            <EditTextPreference
            android:defaultValue="17:30"
            android:key="end_time_preference6"
            android:title="@string/end_time_title6"
            android:inputType="time"/>
        </PreferenceCategory>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/number_of_weeks">
        <ListPreference
            android:key="weeks_preference"
            android:title="@string/weeks_title"
            android:summary="@string/weeks_summary"
            android:entries="@array/weeks_labels"
            android:entryValues="@array/weeks_values"
            android:defaultValue="1" />
    </PreferenceCategory>
</PreferenceScreen>