<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/dark_blue">

    <PreferenceCategory android:title="@string/category">

        <EditTextPreference
            android:defaultValue="Name"
            android:key="name_preference"
            android:summary="@string/user_name_summary"
            android:title="@string/user_name_title" />
        njii

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/date_time_category">

        <ListPreference
            android:defaultValue="HH:mm"
            android:entries="@array/time_formats_labels"
            android:entryValues="@array/time_formats"
            android:key="time_format_preference"
            android:summary="%s"
            android:title="@string/time_format_title" />

        <ListPreference
            android:defaultValue="dd/MM/yyyy"
            android:entries="@array/date_formats_labels"
            android:entryValues="@array/date_formats"
            android:key="date_format_preference"
            android:summary="%s"
            android:title="@string/date_format_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/language_category">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/languages"
            android:entryValues="@array/languages_values"
            android:key="language_preference"
            android:summary="%s"
            android:title="@string/language_title" />

    </PreferenceCategory>

</PreferenceScreen>