<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditEventFragment">

    <RelativeLayout
        android:id="@+id/editEventLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <Spinner
            android:id="@+id/repeatSpinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_alignEnd="@+id/textView5"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/set_category"
            android:padding="5dp" />

        <TextView
            android:id="@+id/text_max_end_date2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/repeatSpinner2"
            android:layout_alignStart="@+id/repeatSpinner2"
            android:layout_alignEnd="@+id/repeatSpinner2"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/max_repeat_date_and_time"
            android:padding="5dp"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categorySpinner2"
            android:layout_alignStart="@+id/categorySpinner2"
            android:layout_alignEnd="@+id/categorySpinner2"
            android:padding="5dp"
            android:text="@string/set_repeat"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_max_end_date2"
            android:layout_alignStart="@+id/categorySpinner2"
            android:layout_alignEnd="@+id/categorySpinner2"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/set_reminder"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/endDateTimeTextView"
            android:layout_alignStart="@+id/endDateTimeTextView"
            android:layout_alignEnd="@+id/endDateTimeTextView"
            android:padding="5dp"
            android:text="@string/set_category"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/reminder_5_min2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignEnd="@+id/textView4"
            android:padding="5dp"
            android:text="@string/reminder_5_min"
            android:textColor="@color/dark_blue" />

        <CheckBox
            android:id="@+id/reminder_15_min2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_5_min2"
            android:layout_alignStart="@+id/reminder_5_min2"
            android:layout_alignEnd="@+id/reminder_5_min2"
            android:padding="5dp"
            android:text="@string/reminder_15_min"
            android:textColor="@color/dark_blue" />

        <CheckBox
            android:id="@+id/reminder_30_min2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_15_min2"
            android:layout_alignStart="@+id/reminder_15_min2"
            android:layout_alignEnd="@+id/reminder_15_min2"
            android:layout_marginEnd="0dp"
            android:padding="5dp"
            android:text="@string/reminder_30_min"
            android:textColor="@color/dark_blue" />

        <CheckBox
            android:id="@+id/reminder_1_day2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_30_min2"
            android:layout_alignStart="@+id/reminder_30_min2"
            android:layout_alignEnd="@+id/reminder_30_min2"
            android:layout_marginEnd="0dp"
            android:padding="5dp"
            android:text="@string/reminder_1_day"
            android:textColor="@color/dark_blue" />

        <CheckBox
            android:id="@+id/reminder_1_hour2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reminder_1_day2"
            android:layout_alignStart="@+id/reminder_1_day2"
            android:layout_alignEnd="@+id/reminder_1_day2"
            android:layout_marginEnd="0dp"
            android:padding="5dp"
            android:text="@string/reminder_1_hour"
            android:textColor="@color/dark_blue" />

        <EditText
            android:id="@+id/eventNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="New Event"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:text="@string/event_name" />

        <EditText
            android:id="@+id/eventDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventNameEditText"
            android:layout_alignStart="@+id/eventNameEditText"
            android:layout_alignEnd="@+id/eventNameEditText"
            android:autofillHints="Description"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:text="@string/event_description" />

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventDescriptionEditText"
            android:layout_alignStart="@+id/eventDescriptionEditText"
            android:layout_alignEnd="@+id/eventDescriptionEditText"
            android:layout_marginEnd="0dp"
            android:autofillHints="Anywhere"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:text="@string/location" />

        <TextView
            android:id="@+id/endDateTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startDateTimeTextView"
            android:layout_alignStart="@+id/startDateTimeTextView"
            android:layout_alignEnd="@+id/startDateTimeTextView"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/end_date_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/startDateTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationEditText"
            android:layout_alignStart="@+id/eventDescriptionEditText"
            android:layout_alignEnd="@+id/eventDescriptionEditText"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/start_date_time"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/categorySpinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_alignEnd="@+id/textView7"
            android:padding="5dp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/categorySpinner2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cancelButton"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/cancelButton"
            android:text="@string/save" />

    </RelativeLayout>

</FrameLayout>