<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="100dp"
        android:text="@string/enter_name"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/name_user"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rounded"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

</androidx.constraintlayout.widget.ConstraintLayout>